# foundry-tui

./: .env.example  .gitignore  CLAUDE.md  README.md  models-catalog.json  pyproject.toml  run.sh
docs/: plan.md  requirements.md
scripts/: setup.ps1  setup.sh  teardown.ps1  teardown.sh
scripts/lib/: common.ps1  common.sh
src/foundry_tui/: __init__.py  __main__.py  app.py  config.py  models.py
src/foundry_tui/api/: __init__.py  azure_ai.py  azure_openai.py  azure_openai_responses.py  client.py  embeddings.py  serverless.py  types.py
src/foundry_tui/storage/: __init__.py  conversations.py  logger.py  memory.py  persistence.py
src/foundry_tui/tools/: __init__.py  base.py  config.py  file_create.py  image_generate.py  memory.py  registry.py  tavily_search.py
src/foundry_tui/ui/: __init__.py  chat.py  conversation_picker.py  input.py  model_picker.py  status_bar.py  styles.tcss
tests/: conftest.py
tests/integration/: conftest.py  test_completions.py  test_responses.py
tests/unit/: test_config.py  test_conversations.py  test_models.py  test_persistence.py  test_tool_registry.py  test_types.py
